correct overlapping of active fab

--- a/src/app/components/creator/room-creator-page/room-creator-page.component.scss
+++ b/src/app/components/creator/room-creator-page/room-creator-page.component.scss
@@ -93,7 +93,7 @@ mat-grid-tile {
 }
 
 .mat-figure {
-  margin-bottom: 20px !important;
+  margin: 20px !important;
 }
 
 mat-expansion-panel {
